fix(main.css): fix the z-index on header

--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ html, body {
     position: absolute;
     left: 0;
     top: 0;
+    z-index: 1;
 }
 
 .headerTitle{
@@ -21,7 +22,6 @@ html, body {
     position: absolute;
     top: 40px;
     left: 40px;
-    z-index: 1000; /* Ensures it stays on top */
 }
 
 header{
@@ -31,5 +31,6 @@ position: absolute;
     width: 100%;
     height: 110px;
     color: rgba(143, 203, 255, 0.589);
-    background-color: rgba(17, 6, 0, 0.774);
+    background-color: rgba(17, 6, 0, 0.747);
+    z-index: 100;
 }
